--- a/package.json
+++ b/package.json
@@ -1,19 +1,16 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm run development",
-        "development": "mix",
-        "watch": "mix watch",
-        "watch-poll": "mix watch -- --watch-options-poll=1000",
-        "hot": "mix watch --hot",
-        "prod": "npm run production",
-        "production": "mix --production"
+        "dev": "vite",
+        "build": "vite build"
     },
     "devDependencies": {
+        "@vitejs/plugin-vue": "^2.3.3",
         "autoprefixer": "^10.4.7",
-        "laravel-mix": "^6.0.6",
+        "laravel-vite-plugin": "^0.2.4",
         "postcss": "^8.4.14",
         "tailwindcss": "^3.1.4",
+        "vite": "^2.9.13",
         "vue-loader": "^16.8.3"
     },
     "dependencies": {
