--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
-APP_NAME=Laravel
+APP_NAME=RSS
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+
+# Path to configuration
+APP_CONFIG_FILE=/home/dan/web/rss/feeds.txt
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
