--- a/docker/services.conf
+++ b/docker/services.conf
@@ -4,23 +4,35 @@ nodaemon=true
 [program:cron]
 command=cron -f
 autorestart=true
-stderr_logfile=/dev/stdout
+redirect_stderr=true
 stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stopasgroup=true
+killasgroup=true
 
 [program:nginx]
 command=/usr/sbin/nginx -g "daemon off;"
 autorestart=true
-stderr_logfile=/dev/stdout
+redirect_stderr=true
 stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stopasgroup=true
+killasgroup=true
 
 [program:php-fpm]
 command=/usr/sbin/php-fpm8.1 -F
 autorestart=true
-stderr_logfile=/dev/stdout
+redirect_stderr=true
 stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stopasgroup=true
+killasgroup=true
 
 [program:php-queue-worker]
 command=/app/artisan queue:work --sleep=3 --tries=3 --max-time=3600
 autorestart=true
-stderr_logfile=/dev/stdout
+redirect_stderr=true
 stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stopasgroup=true
+killasgroup=true
