--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -28,20 +28,14 @@ jobs:
       contents: read
       packages: write
 
-    strategy:
-      matrix:
-        platform: [linux/amd64, linux/arm64]
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
 
       - name: Set up QEMU
-        if: matrix.platform != 'linux/amd64'
         uses: docker/setup-qemu-action@v1
 
       - name: Set up Docker Buildx
-        if: matrix.platform != 'linux/amd64'
         uses: docker/setup-buildx-action@v1
 
       # https://github.com/docker/login-action
@@ -66,7 +60,7 @@ jobs:
         with:
           context: .
           file: ./docker/Dockerfile
-          platforms: ${{ matrix.platform }}
+          platforms: linux/amd64,linux/arm64
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
