--- a/package.json
+++ b/package.json
@@ -5,18 +5,17 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "@vitejs/plugin-vue": "^3.0.3",
-        "autoprefixer": "^10.4.8",
-        "laravel-vite-plugin": "^0.6.0",
-        "postcss": "^8.4.16",
-        "tailwindcss": "^3.1.8",
-        "vite": "^3.0.9",
-        "vue-loader": "^17.0.0"
+        "@vitejs/plugin-vue": "^4.0.0",
+        "autoprefixer": "^10.4.13",
+        "laravel-vite-plugin": "^0.7.3",
+        "postcss": "^8.4.21",
+        "tailwindcss": "^3.2.4",
+        "vite": "^4.1.1",
+        "vue-loader": "^17.0.1"
     },
     "dependencies": {
-        "@inertiajs/inertia": "^0.11.0",
-        "@inertiajs/inertia-vue3": "^0.6.0",
-        "axios": "^0.27.2",
-        "vue": "^3.2.37"
+        "@inertiajs/vue3": "^1.0.0",
+        "axios": "^1.3.2",
+        "vue": "^3.2.47"
     }
 }
