--- a/package.json
+++ b/package.json
@@ -5,17 +5,16 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "@vitejs/plugin-vue": "^4.0.0",
-        "autoprefixer": "^10.4.13",
-        "laravel-vite-plugin": "^0.7.3",
-        "postcss": "^8.4.21",
-        "tailwindcss": "^3.2.4",
-        "vite": "^4.1.1",
-        "vue-loader": "^17.0.1"
+        "@vitejs/plugin-vue": "^4.2.1",
+        "autoprefixer": "^10.4.14",
+        "laravel-vite-plugin": "^0.7.4",
+        "postcss": "^8.4.23",
+        "tailwindcss": "^3.3.2",
+        "vite": "^4.3.5"
     },
     "dependencies": {
-        "@inertiajs/vue3": "^1.0.0",
-        "axios": "^1.3.2",
+        "@inertiajs/vue3": "^1.0.6",
+        "axios": "^1.4.0",
         "vue": "^3.2.47"
     }
 }
