--- a/composer.json
+++ b/composer.json
@@ -56,7 +56,10 @@
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "platform": {
+            "php": "8.1.2"
+        }
     },
     "minimum-stability": "stable",
     "prefer-stable": true
