--- a/docker/services.conf
+++ b/docker/services.conf
@@ -1,5 +1,6 @@
 [supervisord]
 nodaemon=true
+user=root
 
 [program:cron]
 command=cron -f
@@ -20,7 +21,7 @@ stopasgroup=true
 killasgroup=true
 
 [program:php-fpm]
-command=/usr/sbin/php-fpm8.1 -F
+command=/usr/sbin/php-fpm8.3 -F
 autorestart=true
 redirect_stderr=true
 stdout_logfile=/dev/stdout
